--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,123 @@
     box-sizing: border-box;
     font-family: 'Architects Daughter', cursive;
 }
+
+/* APP */
+body{
+    padding: 40px 0px; 
+    display: flex;
+    justify-content:center;
+    min-height: 100vh;
+    background-color: #0D0D0D;
+    color:#0D0D0D;
+}
+
+#app{
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#app h1{
+    color: #F27405;
+}
+
+/* CONTAINER */
+.container{
+    margin-top: 30px;
+    background-color: #F27405;
+    width: 100%;
+}
+
+.container h2{
+    margin-bottom: 10px;
+}
+
+.container input{
+    width: 70%;
+    height: 25px;
+    padding: 0 10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    text-overflow: ellipsis;
+}
+
+.container button{
+    padding: 10px;
+    background-color: #2445A6;
+    color: #F2CA52;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color .3s, color .3s, transform .3s;
+}
+
+.container button:hover{
+    color: #0D0D0D;
+    background-color: #F2CA52;
+    transform: scale(1.2);
+}
+
+/* LIST */
+.list{
+    margin-top: 30px
+}
+
+.list .content{
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
+}
+.content:not(:last-child){
+    border-bottom: 1px solid #0D0D0D;
+    border-width: 4px;
+}
+
+.content span{
+    position: relative;
+    max-width: 40px;
+    padding-left: 10px; ;
+    cursor: pointer;
+    transition: color .3s, transform.3s
+}
+
+.content span:before{
+    position: absolute;
+    left: -8px;
+    top: 5px;
+    content: "";
+    height: 10px;
+    width: 10px;
+    border: 2px solid #2445A6;
+    border-radius: 50%;
+}
+
+.content span:hover{
+    color: #F2CA52;
+    transform: scale(1.2);
+}
+
+.content span.complete:before{
+    font-family: "Font Awesome 5 Free"; 
+    font-weight: 900; 
+    content: "\f00d";
+    line-height: 10px;
+}
+
+.complete{
+    text-decoration: line-through;
+    color: #D91818;
+}
+
+.icons{
+    cursor: pointer;
+    color: #2445A6;
+    font-size: 1.2rem;
+    transition: color .3s, transform .3s;
+}
+
+.icons i:hover{
+    color: #F2CA52;
+    transform: scale(1.2);
+}
